# TRACE-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRIVACY.md  PitchDeck.md  README.md  Source.md  alembic.ini  audit.md  check_health.py  check_session.js  debug_auth.py  debug_balance.py  debug_db.py  debug_ids.py  docker-compose.yml  list.md  pytest.ini  query_db.py  requirements.txt  research.md  test.py  test_endpoint.py  test_jwks.py  test_jwt.js  test_me.js  test_me.py  test_portal.py  test_prod3.py  test_reg.py  test_supabase_jwks.py  test_trace.db  trace.db  trace_text.txt
.do/: app.yaml
.github/workflows/: deploy-do.yml  deploy.yml
alembic/: env.py
alembic/versions/: 8a69eff76181_add_event_records_table_for_.py  (+1 more)
api/: __init__.py  auth.py  config.py  database.py  detection.py  graph.py  main.py  metrics.py  middleware.py  models.py  rate_limit.py  scorer.py  simulation.py  state.py  worker.py
config/: alert_rules.yml  alertmanager.yml  prometheus.yml  promtail.yml
demo/: index.html  portal.html  simulation_data.json
docs/: SECRETS.md
scripts/: generate_demo_data.py
sdk/: README.md  x402_middleware.py  x402_middleware.ts
sdk-python/x402_trace_trust/: README.md  __init__.py  pyproject.toml
sdk-python/x402_trace_trust/examples/: server.py
sdk-python/x402_trace_trust/tests/: test_extension.py
sdk-python/x402_trace_trust/x402_trace_trust/: __init__.py  extension.py
terraform/: main.tf  services.tf  variables.tf
tests/: __init__.py  conftest.py  test_api.py  test_scorer.py  test_simulation.py
web/: eslint.config.mjs  package-lock.json  package.json  test_prod.js  test_prod2.js
(+45 files in other folders)
