[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x402-trace-trust"
version = "0.1.0"
description = "TRACE trust scoring extension for x402 payment middleware"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TRACE API", email = "team@traceapi.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "x402>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/trace-api/trace-api"
Repository = "https://github.com/trace-api/trace-api"
Documentation = "https://docs.trace.dev"
Issues = "https://github.com/trace-api/trace-api/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["x402_trace_trust*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TID", "PERF", "ARG"]
ignore = ["E501", "ARG001", "ARG002"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true